added implementation of controller, service, repository